--- a/week1/Day4/CV-exercise/index.html
+++ b/week1/Day4/CV-exercise/index.html
@@ -7,16 +7,68 @@
       rel="stylesheet"
       href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day4/CV-exercise/style.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>CV</title>
   </head>
   <body>
     <nav class="navbar">
-      <p><b>Sarah</b> Garson</p>
-      <a class="link-nav" href="#about">About me</a>
-      <a class="link-nav" href="#resume">Resume</a>
-      <a class="link-nav" href="#portifolio">Portifolio </a>
-      <a class="link-nav" href="contact">Contact</a>
+      <div id="nav-left">
+        <p><b>Sarah</b> Garson</p>
+      </div>
+      <div class="nav-right">
+        <a class="link-nav" href="#about">About me</a>
+        <a class="link-nav" href="#resume">Resume</a>
+        <a class="link-nav" href="#portifolio">Portifolio </a>
+        <a class="link-nav" href="#contact">Contact</a>
+      </div>
     </nav>
+
+    <header>
+      <div class="circle"></div>
+      <p id="first-p" class="p-header">Full-Stack Developer Student</p>
+      <h3>Sarah Garson</h3>
+      <p class="p-header">
+        Full-Stack Development student in the Developers Institute with a
+        background in Technical Support of Software (Tier 1) and Mechanical
+        Engineering, fluent in English, Hebrew and Portuguese, team player,
+        driven by an unyielding curiosity and a rapid aptitude for learning.
+      </p>
+      <button id="button1" class="linkedin">
+        <a class="linkedin" href="www.linkedin.com/in/sarah-garson-3563161bb"
+          >LinkedIn</a
+        >
+      </button>
+    </header>
+
+    <article>
+      <p id="experiences">Experiences</p>
+      <div class="up-left">
+        <h5>
+          Practi (JE), Tel Aviv — Technical Support Product Specialist of
+          Software (Tier 1)
+        </h5>
+        <p>
+          The job itself included technical software support and report analysis
+          to partners using the company's software. The job required fast
+          thinking, communication abilities in fluent english, software errors
+          analysis and quickly adapting to the software and feature constant
+          changes.
+        </p>
+      </div>
+      <div class="up-right">
+        <h5>I.A.F, Ramon — Mechanic specialized in the Boeing AH-64</h5>
+        <p>
+          Mechanical Technician for both versions of the Boeing Apache AH-64.
+          Specialized in the hydraulic, pneumatic and mechanical systems of the
+          helicopter.
+        </p>
+      </div>
+    </article>
   </body>
 </html>
