--- a/week1/Day4/CV-exercise/index.html
+++ b/week1/Day4/CV-exercise/index.html
@@ -48,26 +48,28 @@
 
     <article>
       <p id="experiences">Experiences</p>
-      <div class="up-left">
-        <h5>
-          Practi (JE), Tel Aviv — Technical Support Product Specialist of
-          Software (Tier 1)
-        </h5>
-        <p>
-          The job itself included technical software support and report analysis
-          to partners using the company's software. The job required fast
-          thinking, communication abilities in fluent english, software errors
-          analysis and quickly adapting to the software and feature constant
-          changes.
-        </p>
-      </div>
-      <div class="up-right">
-        <h5>I.A.F, Ramon — Mechanic specialized in the Boeing AH-64</h5>
-        <p>
-          Mechanical Technician for both versions of the Boeing Apache AH-64.
-          Specialized in the hydraulic, pneumatic and mechanical systems of the
-          helicopter.
-        </p>
+      <div class="row">
+        <div class="up-left">
+          <h5>
+            Practi (JE), Tel Aviv — Technical Support Product Specialist of
+            Software (Tier 1)
+          </h5>
+          <p>
+            The job itself included technical software support and report
+            analysis to partners using the company's software. The job required
+            fast thinking, communication abilities in fluent english, software
+            errors analysis and quickly adapting to the software and feature
+            constant changes.
+          </p>
+        </div>
+        <div class="up-right">
+          <h5>I.A.F, Ramon — Mechanic specialized in the Boeing AH-64</h5>
+          <p>
+            Mechanical Technician for both versions of the Boeing Apache AH-64.
+            Specialized in the hydraulic, pneumatic and mechanical systems of
+            the helicopter.
+          </p>
+        </div>
       </div>
     </article>
   </body>
