changes-article-bug

--- a/week1/Day4/CV-exercise/index.html
+++ b/week1/Day4/CV-exercise/index.html
@@ -31,7 +31,7 @@
 
     <header>
       <div class="circle"></div>
-      <p id="first-p" class="p-header">Full-Stack Developer Student</p>
+      <p id="first-p" class="p-header"><b>Full-Stack Developer Student</b></p>
       <h3>Sarah Garson</h3>
       <p class="p-header">
         Full-Stack Development student in the Developers Institute with a
@@ -39,15 +39,22 @@
         Engineering, fluent in English, Hebrew and Portuguese, team player,
         driven by an unyielding curiosity and a rapid aptitude for learning.
       </p>
-      <button id="button1" class="linkedin">
-        <a class="linkedin" href="www.linkedin.com/in/sarah-garson-3563161bb"
+      <button id="button1" class="button-header">
+        <a
+          class="button-header"
+          href="https://www.linkedin.com/in/sarah-garson-3563161bb/"
           >LinkedIn</a
+        >
+      </button>
+      <button id="button2" class="button-header">
+        <a class="button-header" href="https://github.com/sarahgarson">
+          GitHub</a
         >
       </button>
     </header>
 
     <article>
-      <p id="experiences">Experiences</p>
+      <h3>Experience</h3>
       <div class="row">
         <div class="up-left">
           <h5>
