--- a/week1/Day5/Mini-project/index.html
+++ b/week1/Day5/Mini-project/index.html
@@ -6,15 +6,42 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="css file path here" />
+    <link
+      rel="stylesheet"
+      href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/style.css"
+    />
     <title>Shopping Website</title>
   </head>
   <body>
     <!-- navbar here -->
+    <header>
+      <div class="topnav">
+        <i
+          class="fa-solid fa-feather"
+          class="link-nav"
+          id="afa"
+          href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/products.html"
+          >AFA
+        </i>
 
-    <nav class="nav">
-      <p>C.W</p>
-    </nav>
+        <a
+          class="link-nav right-link"
+          href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/products.html"
+          >New</a
+        >
+        <a class="link-nav right-link" href="#contact">Contact</a>
+        <a class="link-nav right-link" href="#about">About</a>
+        <form class="login" action="#" method="post">
+          <input type="text" placeholder="username" name="username" />
+          <input type="password" placeholder="password" name="password" />
+          <button id="login-button" type="submit">Login</button>
+        </form>
+      </div>
+    </header>
+
     <!-- footer here -->
+    <footer class="footer">
+      <p>&copy; 2024 Sarah Garson</p>
+    </footer>
   </body>
 </html>
