--- a/week1/Day4/Login-page-exercise/index.html
+++ b/week1/Day4/Login-page-exercise/index.html
@@ -5,15 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day4/Login-page-exercise/styel.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Log In Page</title>
   </head>
   <body>
     <header>
       <div class="login-container">
         <h2>Log In</h2>
-        <form>
+        <form class="email-password">
           <input type="text" placeholder="email" required />
           <input type="password" placeholder="password" required />
         </form>
@@ -21,19 +36,30 @@
           <label class="container">
             <input type="checkbox" />
             <span class="checkmark"></span>
-            Remember Me
+            Remember me
           </label>
+          <p class="checkbox-right">Forgot password?</p>
         </div>
-        <button class="button-login" type="subit">Log In</button>
+        <button class="button-login" type="subit">LOG IN</button>
+
+        <div class="connect-with">
+          <p>Or Connect with</p>
+        </div>
+        <div class="icons">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-github"></i>
+          <i class="fab fa-linkedin-in"></i>
+        </div>
+      </div>
+      <div class="container-right">
+        <div class="icon-right">
+          <i class="fas fa-user-plus"></i>
+        </div>
       </div>
     </header>
-    <div class="right-pic">
-      <img
-        src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day4/Login-page-exercise/Screenshot 2024-04-18 at 12.49.11.png"
-      />
-      <div class="connect-with">
-        <p>Or Connect with</p>
-      </div>
-    </div>
+    <footer>
+      <p>&copy; 2020</p>
+    </footer>
   </body>
 </html>
