Miniproject-added-products-cards

--- a/week1/Day5/Mini-project/products.html
+++ b/week1/Day5/Mini-project/products.html
@@ -16,39 +16,99 @@
     <!-- navbar here -->
     <header>
       <div class="topnav">
-        <i class="fa-solid fa-feather" class="link-nav" id="afa" href="#"
+        <i
+          class="fa-solid fa-feather"
+          class="link-nav"
+          id="afa"
+          href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/index.html"
           >AFA</i
         >
         <a class="link-nav right-link" href="#new">New</a>
         <a class="link-nav right-link" href="#contact">Contact</a>
-        <a class="link-nav right-link" href="#about">About</a>
-        <form class="login" action="#" method="post">
+        <a
+          class="link-nav right-link"
+          href="file:///Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/index.html#about"
+          >About</a
+        >
+        <form class="login" action="/login" method="post">
           <input type="text" placeholder="username" name="username" />
           <input type="password" placeholder="password" name="password" />
           <button id="login-button" type="submit">Login</button>
         </form>
       </div>
     </header>
-    <article>
-      <div class="card">
+    <section class="row">
+      <div class="column">
         <img
           src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/tamara-menzi-n-vnWQmmVoY-unsplash.jpg"
           alt="Avatar"
         />
-        <div class="container">
+        <div class="card">
           <h4><b>John Doe</b></h4>
           <p>Architect & Painter</p>
+          <button class="cart-button">ADD TO CART</button>
         </div>
+      </div>
+      <div class="column">
         <img
           src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/europeana-6c43FgRt0Dw-unsplash.jpg"
           alt="Avatar"
         />
-        <div class="container">
-          <h4><b>John Doe</b></h4>
-          <p>Architect & Painter</p>
+        <div class="card">
+          <h4><b>Ella Goldberg</b></h4>
+          <p>Painter & Singer</p>
+          <button class="cart-button">ADD TO CART</button>
         </div>
       </div>
-    </article>
+    </section>
+    <section class="row">
+      <div class="column">
+        <img
+          src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/geordanna-cordero-5NE6mX0WVfQ-unsplash.jpg"
+          alt="Avatar"
+        />
+        <div class="card">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Painter</p>
+          <button class="cart-button">ADD TO CART</button>
+        </div>
+      </div>
+      <div class="column">
+        <img
+          src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/clark-van-der-beken-zKnQnyARggY-unsplash.jpg"
+          alt="Avatar"
+        />
+        <div class="card">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Painter</p>
+          <button class="cart-button">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+    <section class="row">
+      <div class="column">
+        <img
+          src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/pawel-czerwinski-nJX3ceE4zuU-unsplash.jpg"
+          alt="Avatar"
+        />
+        <div class="card">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Painter</p>
+          <button class="cart-button">ADD TO CART</button>
+        </div>
+      </div>
+      <div class="column">
+        <img
+          src="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/pawel-czerwinski-BPrk2cOoCq8-unsplash.jpg"
+          alt="Avatar"
+        />
+        <div class="card">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Painter</p>
+          <button class="cart-button">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
 
     <!-- footer here -->
     <footer class="footer">
