--- a/week1/Day5/Mini-project/index.html
+++ b/week1/Day5/Mini-project/index.html
@@ -16,13 +16,7 @@
     <!-- navbar here -->
     <header>
       <div class="topnav">
-        <i
-          class="fa-solid fa-feather"
-          class="link-nav"
-          id="afa"
-          href="/Users/sarahgarson/Documents/DI_Bootcamp/week1/Day5/Mini-project/products.html"
-          >AFA
-        </i>
+        <i class="fa-solid fa-feather" class="link-nav" id="afa">AFA </i>
 
         <a
           class="link-nav right-link"
@@ -37,10 +31,37 @@
           <button id="login-button" type="submit">Login</button>
         </form>
       </div>
+      <h1 id="welcome">Welcome to AFA</h1>
+      <p id="p-header">
+        Here you will fint the best and most famous pieces of art in history. We
+        hope you can enjoy every single painting we provide and remember, Art is
+        For All. Art is a diverse range of human activity and its resulting
+        product that involves creative or imaginative talent generally
+        expressive of technical proficiency, beauty, emotional power, or
+        conceptual ideas.There is no generally agreed definition of what
+        constitutes art,and its interpretation has varied greatly throughout
+        history and across cultures. In the Western tradition, the three
+        classical branches of visual art are painting, sculpture, and
+        architecture.Theatre, dance, and other performing arts, as well as
+        literature, music, film and other media such as interactive media, are
+        included in a broader definition of the arts Until the 17th century, art
+        referred to any skill or mastery and was not differentiated from crafts
+        or sciences. In modern usage after the 17th century, where aesthetic
+        considerations are paramount, the fine arts are separated and
+        distinguished from acquired skills in general, such as the decorative or
+        applied arts.
+      </p>
     </header>
 
     <!-- footer here -->
     <footer class="footer">
+      <p class="wiki">
+        The website where the definition of art was taken is:<a
+          href="https://en.wikipedia.org/wiki/Art"
+        >
+          Wikipedia</a
+        >
+      </p>
       <p>&copy; 2024 Sarah Garson</p>
     </footer>
   </body>
