added-projects-links-portifolio

--- a/week1/Day4/CV-exercise/index.html
+++ b/week1/Day4/CV-exercise/index.html
@@ -182,11 +182,23 @@
       </p>
       <p class="p-portifolio">
         <b>Tribute Website (HTML and CSS project):</b> In my initial project,
-        available on my GitHub repository, I was tasked with crafting a tribute
-        website utilizing my proficiency in HTML and CSS prior to my Bootcamp
-        education. You're welcome to explore my GitHub repository to examine the
-        HTML and CSS code files for this project, as well as any other projects
-        I've undertaken, including this CV.
+        available on my GitHub repository
+        <a
+          class="tribute-link"
+          href="https://sarahgarson.github.io/DI-Bootcamp-Stage1/Final-Project/"
+          target="_blank"
+          >(here)</a
+        >, I was tasked with crafting a tribute website utilizing my proficiency
+        in HTML and CSS prior to my Bootcamp education. You're welcome to
+        explore my GitHub repository to examine the HTML and CSS code files for
+        this project, as well as any other projects I've undertaken, including
+        this CV (where you can find the written code
+        <a
+          class="tribute-link"
+          href="https://github.com/sarahgarson/DI_Bootcamp/tree/main/week1/Day4/CV-exercise"
+          target="_blank"
+          >here</a
+        >).
       </p>
     </section>
 
