cards-added-bug-overflowing-shadows

--- a/week2/Day2/exercise1/inde.html
+++ b/week2/Day2/exercise1/inde.html
@@ -28,5 +28,45 @@
         <div class="sold">Sold on Shopify</div>
       </div>
     </section>
+
+    <div class="grid-container-cards">
+      <div class="card">
+        <div id="first-card" class="container1">
+          <p>
+            I am seriously happy about running our store on Shopify. Powerful
+            features and easy to set up,running an online store shouldnt be this
+            much fun!
+          </p>
+        </div>
+        <div class="container2">
+          <h4><b>Tina Roth Eisenberg</b></h4>
+          <p>Designer, Founder of Tattly</p>
+        </div>
+      </div>
+      <div class="card">
+        <div id="second-card" class="container1">
+          <p>
+            Shopify has helped me grow my business amazingly. It's been a
+            pleasure because everything has been easier than I ever imagined.
+          </p>
+        </div>
+        <div id="card2" class="container2">
+          <h4><b>Corrine Anestopoulos</b></h4>
+          <p>Founder, BIKO Jewelry</p>
+        </div>
+      </div>
+      <div class="card">
+        <div id="third-card" class="container1">
+          <p>
+            The best thing about Shopify is that it's made me not have to worry
+            about anything that has to do with ecommerce.
+          </p>
+        </div>
+        <div id="card3" class="container2">
+          <h4><b>Chris Tsang</b></h4>
+          <p>Founder, Mindzai Toys</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
