git-exercise-week2-day3

--- a/week1/Day4/CV-exercise/index.html
+++ b/week1/Day4/CV-exercise/index.html
@@ -188,11 +188,12 @@
           href="https://sarahgarson.github.io/DI-Bootcamp-Stage1/Final-Project/"
           target="_blank"
           >(here)</a
-        >, I was tasked with crafting a tribute website utilizing my proficiency
-        in HTML and CSS prior to my Bootcamp education. You're welcome to
-        explore my GitHub repository to examine the HTML and CSS code files for
-        this project, as well as any other projects I've undertaken, including
-        this CV (where you can find the written code
+        >
+        I was tasked with crafting a tribute website utilizing my proficiency in
+        HTML and CSS prior to my Bootcamp education. You're welcome to explore
+        my GitHub repository to examine the HTML and CSS code files for this
+        project, as well as any other projects I've undertaken, including this
+        CV (where you can find the written code
         <a
           class="tribute-link"
           href="https://github.com/sarahgarson/DI_Bootcamp/tree/main/week1/Day4/CV-exercise"
