icons-buttons-added

--- a/week2/Day4/exercise1/index.html
+++ b/week2/Day4/exercise1/index.html
@@ -11,12 +11,6 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha384-XEzBrmc6NJVkqzn7kBldcb5Puk62FFoH79H3P5a9tphzyI4o0OrQIQqY82lLe+tr"
-      crossorigin="anonymous"
-    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -103,6 +97,7 @@
       <div class="row align-items-start">
         <div class="col">
           <h3>Heading</h3>
+
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
             saepe natus quae asperiores dicta, corporis at tenetur architecto id
@@ -110,7 +105,18 @@
             impedit magni?
           </p>
           <button type="button" class="btn btn-light">
-            <i class="fas fa-chart-simple"></i>View Details
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-bar-chart"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M4 11H2v3h2zm5-4H7v7h2zm5-5v12h-2V2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1z"
+              /></svg
+            >View Details
           </button>
         </div>
         <div class="col">
@@ -121,7 +127,23 @@
             qui voluptatum soluta? Quo et omnis debitis similique tempore
             impedit magni?
           </p>
-          <button type="button" class="btn btn-light">View Details</button>
+          <button type="button" class="btn btn-light">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-phone"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
+              />
+              <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2" />
+            </svg>
+
+            View Details
+          </button>
         </div>
         <div class="col">
           <h3>
@@ -134,7 +156,21 @@
             qui voluptatum soluta? Quo et omnis debitis similique tempore
             impedit magni?
           </p>
-          <button type="button" class="btn btn-light">View Details</button>
+          <button type="button" class="btn btn-light">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-geo-alt-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
+              />
+            </svg>
+            View Details
+          </button>
         </div>
       </div>
     </div>
