--- a/PortifolioProject/index.html
+++ b/PortifolioProject/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <title>Portifolio Project</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -12,4 +12,57 @@
       crossorigin="anonymous"
     />
   </head>
+
+  <body>
+    <nav class="navbar navbar-expand-lg fixed-top bg-white">
+      <div class="container-fluid justify-content-center">
+        <a
+          class="navbar-nav navbar-brand"
+          style="color: rgb(80, 80, 80)"
+          href="#"
+          >Sarah Garson</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse"
+          style="color: rgb(80, 80, 80)"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <header>
+      <div class="container-header">
+        <figure class="figure">
+          <img
+            src="leone-venter-VieM9BdZKFo-unsplash.jpg"
+            class="figure-img img-fluid rounded"
+            alt="background-white-picture"
+          />
+        </figure>
+        <div class="carousel-caption header-hs">
+          <h1 class="text-header h1-header">Hey There, I'm Sarah!</h1>
+          <br />
+          <h3 class="text-header">It is a pleasure to meet you.</h3>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
