--- a/week1/Day2/exercise1-HTML-page/index.html
+++ b/week1/Day2/exercise1-HTML-page/index.html
@@ -53,7 +53,7 @@
     </div>
     <div>
       <img
-        src="/Users/sarahgarson/Documents/CodingVSDI/week1_class1/seconday-homework/Exercise_cat2.png
+        src="Exercise_cat2.png
       "
         width="1200px"
       />
@@ -99,10 +99,7 @@
       </tr>
     </table>
     <div>
-      <img
-        src="/Users/sarahgarson/Documents/CodingVSDI/week1_class1/seconday-homework/Exercise_cat4.png"
-        width="1200px"
-      />
+      <img src="Exercise_cat4.png" width="1200px" />
     </div>
   </body>
 </html>
