daily-challenge-updated-done

--- a/week9/Day4/Daily-Challenge/daily-challenge.html
+++ b/week9/Day4/Daily-Challenge/daily-challenge.html
@@ -26,6 +26,8 @@
       <button id="submitBtn" type="submit" value="Send">Send</button>
     </form>
 
+    <div id="output"></div>
+
     <script src="daily-challenge.js"></script>
   </body>
 </html>
