daily-challenge-done

--- a/week10/Day5/Mini-project/Star-Wars-Web-APP/star-wars.html
+++ b/week10/Day5/Mini-project/Star-Wars-Web-APP/star-wars.html
@@ -20,7 +20,7 @@
     <div class="container">
       <h1 class="title">Star Wars</h1>
       <div id="character-info" class="character-info">
-        <!-- Characters name, height, gender, birth year, and home world will be displayed here.They're going to be fetched on js file->
+        <!-- Characters name, height, gender, birth year, and home world will be displayed here.They're going to be fetched on js file-->
       </div>
     </div>
     <div>
