--- a/PortifolioProject/index.html
+++ b/PortifolioProject/index.html
@@ -99,6 +99,14 @@
               <div class="skills-box">Github</div>
               <div class="skills-box">Website Design</div>
               <div class="skills-box">Figma</div>
+              <div class="skills-box">Node</div>
+              <div class="skills-box">React</div>
+              <div class="skills-box">Typescript</div>
+              <div class="skills-box">Authentication</div>
+              <div class="skills-box">API</div>
+              <div class="skills-box">SQL database</div>
+              <div class="skills-box">Mongo No SQL</div>
+              <div class="skills-box">YML configuration</div>
             </div>
           </div>
         </div>
@@ -208,6 +216,25 @@
                     Search platform, the website includes a table and a search
                     form where you can select specific job roles and their
                     locations.
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col">
+            <a
+              href="https://github.com/sarahgarson/Tempo-web-app"
+              class="card-link"
+              target="_blank"
+            >
+              <div class="card">
+                <img src="Tempo-Employees-page at 18.31.43.png" class="card-img-top" alt="webpage" />
+                <div class="card-body">
+                  <h5 class="card-title" style="color: rgb(115, 113, 113)">
+                    Web Application- Tempo
+                  </h5>
+                  <p class="card-text">
+                    My Final Project where its presented a web application for shift scheduling called Tempo. The project was created using React, Node.js, Express, Pgadmin SQL, and Bootstrap.
                   </p>
                 </div>
               </div>
