--- a/PortifolioProject/index.html
+++ b/PortifolioProject/index.html
@@ -60,7 +60,7 @@
           <h3 class="text-header">It is a pleasure to meet you.</h3>
           <p class="text-header p-header">
             Welcome to my portifolio page, here I will share with you some of my
-            projects using HTML,CSS and Javascript. Fell free to explore around
+            projects using my coding skills. Feel free to explore around
             the page and contact me if interested.
           </p>
         </div>
@@ -97,7 +97,8 @@
               <div class="skills-box">HTML</div>
               <div class="skills-box">CSS</div>
               <div class="skills-box">Github</div>
-              <div class="skills-box">Website Design</div>
+              <div class="skills-box">JS</div>
+              <div class="skills-box">Redux</div>
               <div class="skills-box">Figma</div>
               <div class="skills-box">Node</div>
               <div class="skills-box">React</div>
@@ -287,6 +288,15 @@
               href="https://github.com/sarahgarson/di_exercises/tree/main/week2/Day4/exercise3"
               target="_blank"
               >Intense Job Search Webpage</a
+            >
+          </button>
+        </div>
+        <div class="btn-group me-2" role="group" aria-label="Second group">
+          <button type="button" class="btn">
+            <a
+              href="https://github.com/sarahgarson/Tempo-web-app"
+              target="_blank"
+              >Tempo Web App</a
             >
           </button>
         </div>
